--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY PERSONAL WEBSITE</title>
+    <link rel="shortcut icon" type="image/png" href="/images/iconcony.jpg">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/ef0193b0f0.js" crossorigin="anonymous"></script>
 </head>
