--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY PERSONAL WEBSITE</title>
+    <title>RACHEL'S WEBSITE</title>
      <link rel="shortcut icon" href="images/iconcony.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/ef0193b0f0.js" crossorigin="anonymous"></script>
